# amoeba

./: BROWSE  CMakeLists.txt  ChangeLog  README  README.md
doc/: doxygen.conf
include/amoeba/: amoeba.h  amoeba_version.h  annealing.h  dummy_amoeba.h  nosy.h
programs/: .#test_simple.cxx  test_annealing.cxx  test_nosy.cxx  test_simple.cxx
src/: amoeba.cc  annealing.cc  nosy.cc
tests/: test_annealing.cxx  test_nosy.cxx  test_simple.cxx
tests/include/: Drawer.h  Tools.h
tests/src/: Drawer.cc
